--- a/src/ContactManagement.Api/appsettings.json
+++ b/src/ContactManagement.Api/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ContactManagementDb;User Id=ad;Password=Corelia_DB@2026!;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost,1433;Database=ContactManagementDb;User Id=sa;Password=Corelia_DB@2026!;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": {
-    "SecretKey": "7c4dd815c0059473f39e4ab35820be78",
+    "SecretKey": "7c4dd815c0059473f39e4ab35820be78a1b2c3d4e5f6",
     "Issuer": "ContactManagementApi",
     "Audience": "ContactManagementClient",
     "ExpirationInMinutes": 60
